data/derived/sp14/progs/unify/prog4596.ml.out
Characters 48-61:
  let fixpoint (f,b) = wwhile ((let (x,y)= f b in (x, x>b||x<b)),b);;
                                                  ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
